--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,112 @@
-groq
+aiofiles==23.2.1
+aiohttp==3.9.5
+aioprocessing==2.0.1
+aiosignal==1.3.1
+analytics-python==1.2.9
+annotated-types==0.6.0
+anyio==3.7.1
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+backoff==2.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+distro==1.9.0
+docker-pycreds==0.4.0
+executing==2.0.1
 fastapi==0.104.1
+fonttools==4.51.0
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+gql==3.5.0
+graphql-core==3.2.3
+greenlet==3.0.3
+groq==0.5.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+ipykernel==6.29.4
+ipython==8.24.0
+janus==1.0.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonpickle==3.0.4
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+multidict==6.0.5
+nest-asyncio==1.6.0
+networkx==3.3
+numpy==1.26.4
+openai==1.28.1
+outcome==1.3.0.post0
+packaging==24.0
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.1
+playwright==1.43.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.0.0
 pydantic==2.4.2
+pydantic_core==2.10.1
+pyee==11.1.0
+Pygments==2.18.0
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+python-json-logger==2.0.7
+pytz==2024.1
+pyvis==0.3.2
+PyYAML==6.0.1
+pyzmq==26.0.3
+regex==2024.5.10
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.7.1
+selenium==4.20.0
+sentry-sdk==2.1.1
+setproctitle==1.3.3
+setuptools==69.5.1
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+stack-data==0.6.3
+starlette==0.27.0
+tiktoken==0.6.0
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.24.0
-networkx
-pyvis
+wandb==0.17.0
+wcwidth==0.2.13
+weave==0.50.2
+Werkzeug==3.0.3
+wheel==0.43.0
+wsproto==1.2.0
+yarl==1.9.4
