--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "description": "template for mdb-react-ui-kit",
   "private": true,
   "dependencies": {
+    "dompurify": "^3.1.3",
+    "mdb-react-ui-kit": "8.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "mdb-react-ui-kit": "8.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
